--- a/.github/workflows/build-wasm-artifacts.yml
+++ b/.github/workflows/build-wasm-artifacts.yml
@@ -1,4 +1,4 @@
-name: Build WASM artifacts (_framework)
+name: Build WASM artifacts
 
 on: [push, workflow_dispatch]
 
@@ -20,7 +20,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build -c Release --no-restore
     - name: Upload the _framework folder
       uses: actions/upload-artifact@v4.6.2
       with:
